Fix analytics and scroll
